--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "1.0.0-next.80",
+		"@sveltejs/adapter-static": "1.0.0-next.44",
 		"@sveltejs/kit": "1.0.0-next.511",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
